# bengal-tools

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy.yml
vs-code/: package-lock.json  package.json
vs-code/syntaxes/: Bengal.tmLanguage.json
web/: Cargo.toml  frontend.html  index.html
web/src/: bytecode_viewer.rs  main.rs
web/wasm/: Cargo.toml
web/wasm/sparkler-stub/: Cargo.toml
web/wasm/sparkler-stub/src/: executor.rs  lib.rs  opcodes.rs  vm.rs
web/wasm/src/: lib.rs
