[package]
name = "bengal-godbolt"
version = "0.1.0"
edition = "2021"
description = "Godbolt-like compiler explorer for Bengal language"

[workspace]
members = ["wasm"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "mime_guess"] }
