[package]
name = "bengal-godbolt-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }

# Bengal compiler from git
bengal-compiler = { git = "https://github.com/Nelonn/bengal" }
sparkler = { git = "https://github.com/Nelonn/bengal", subdirectory = "sparkler" }

# Patch sparkler to use a WASM-compatible version
[patch."https://github.com/Nelonn/bengal"]
sparkler = { path = "./sparkler-stub" }

[dependencies.web-sys]
version = "0.3"
features = ["Window", "HtmlTextAreaElement", "HtmlInputElement", "HtmlDivElement"]

[profile.release]
opt-level = "s"
lto = true
